Fix: some weird z-index issue was hiding the graphic

--- a/src/components/Block/styles.scss
+++ b/src/components/Block/styles.scss
@@ -12,7 +12,7 @@
   top: 0 !important;
   bottom: auto !important;
   left: 0 !important;
-  z-index: -1 !important;
+  z-index: 1 !important;
   will-change: transform;
 }
 
