--- a/src/components/Totals/styles.scss
+++ b/src/components/Totals/styles.scss
@@ -109,7 +109,7 @@
   width: 100%;
   height: 100%;
   border-right: 0.0625rem dashed $color_Grey;
-  z-index: -1;
+  z-index: 1;
 }
 
 .winLabel {
